--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,8 +6,8 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Main.Main
-GameDefaultMap=/Game/Maps/Main.Main
+EditorStartupMap=/Game/Fantastic_Village_Pack/maps/map_village_day.map_village_day
+GameDefaultMap=/Game/Fantastic_Village_Pack/maps/map_village_day.map_village_day
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -57,4 +57,18 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=21EC3C9E444D93AB59ED2A8EF4EEDA71
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
 
