애니메이션 연결, Combat 모드 전환
우클릭하면 Combat <-> Normal 모드 전환

Combat 모드 시
- 이동 화면 정면 고정
- 속도 느려짐
- 애니메이션 바뀜
- 카메라 구도(Spring Arm) 가까워짐

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -6,8 +6,19 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Fantastic_Village_Pack/maps/map_village_day.map_village_day
-GameDefaultMap=/Game/Fantastic_Village_Pack/maps/map_village_day.map_village_day
+EditorStartupMap=/Game/Game/Map/main.main
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Game/Map/main.main
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Game/Blueprints/BP_WizardAdventureGameMode.BP_WizardAdventureGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
