--- a/Source/WizAdventure/.editorconfig
+++ b/Source/WizAdventure/.editorconfig
@@ -37,7 +37,7 @@ cpp_space_before_function_open_parenthesis = remove
 cpp_space_within_parameter_list_parentheses = false
 cpp_space_between_empty_parameter_list_parentheses = false
 cpp_space_after_keywords_in_control_flow_statements = true
-cpp_space_within_control_flow_statement_parentheses = true
+cpp_space_within_control_flow_statement_parentheses = false
 cpp_space_before_lambda_open_parenthesis = false
 cpp_space_within_cast_parentheses = false
 cpp_space_after_cast_close_parenthesis = false
@@ -54,7 +54,7 @@ cpp_space_between_empty_square_brackets = false
 cpp_space_group_square_brackets = true
 cpp_space_within_lambda_brackets = false
 cpp_space_between_empty_lambda_brackets = false
-cpp_space_before_comma = true
+cpp_space_before_comma = false
 cpp_space_after_comma = true
 cpp_space_remove_around_member_operators = true
 cpp_space_before_inheritance_colon = true
