몬스터 배치, 인게임 UI, 메인화면 UI 구현

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,9 +4,10 @@ GameName=WizAdventure
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure=False
+r.GenerateMeshDistanceFields=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Game/Map/main.main
+EditorStartupMap=/Game/Game/Map/WizAdventureMain.WizAdventureMain
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -15,9 +16,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Game/Map/main.main
+GameDefaultMap=/Game/Game/Map/StartMenu.StartMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Game/Blueprints/BP_WizardAdventureGameMode.BP_WizardAdventureGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
